build file configurated and mock data tested